# AutomatedSeriesClassification

./: .gitignore  DataPreprocessing.ipynb  README.md  UPGMA_classification-ChEMBL_targets.ipynb  UPGMA_classification-rdkit.ipynb  UPGMA_classification.arthor.ipynb  dataprep.py  requirements.txt  setup.cfg
AutomatedSeriesClassification/: Butinaclustering.py  UPGMAclustering.py  utilsStructureEval.py
src/automated_series_classification/: Butinaclustering.py  UPGMAclustering.py  dataprep.py  mainSeriesClassification.py  utilsDataPrep.py  utilsDrawing.py  utilsStructureEval.py
