##########################
# Setup.py Configuration #
##########################
[metadata]
name = automated_series_classification
version = 0.0.1
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/iwatobipen/AutomatedSeriesClassification
download_url = https://github.com/iwatobipen/AutomatedSeriesClassification/releases
project_urls =
    Bug Tracker = https://github.com/iwatobipen/AutomatedSeriesClassification/issues
    Source Code = https://github.com/iwatobipen/AutomatedSeriesClassification

# Author information
author = iwatobipen
# author_email = ...
maintainer = iwatobipen
# maintainer_email = ...

# License Information
license = MIT
license_file = LICENSE

[options]
# Requirements (formerly known as requirements.txt)
install_requires =
    numpy
    pandas
    sklearn
    matplotlib
    # Since RDKit can't be installed through pip, don't put it here

# Where is my code (Part 1/3)
packages = find:
# Where is my code (Part 2/3)
package_dir =
    = src

[options.packages.find]
# Where is my code (Part 3/3)
where = src
